[gd_scene load_steps=3 format=3 uid="uid://wysk8ngvohrk"]

[ext_resource type="Script" uid="uid://t3rs3k3uyu2l" path="res://soundboard_settings/sound_board_settings.gd" id="1_owgil"]
[ext_resource type="PackedScene" uid="uid://sayqhlslio3r" path="res://volume_controller/volume_controller.tscn" id="1_sdyqd"]

[node name="SoundboardSettings" type="VBoxContainer" node_paths=PackedStringArray("save_file_dialog", "load_file_dialog")]
script = ExtResource("1_owgil")
save_file_dialog = NodePath("SaveFileDialog")
load_file_dialog = NodePath("LoadFileDialog")

[node name="SaveFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
force_native = true
access = 2
filters = PackedStringArray("*.godk")
use_native_dialog = true

[node name="LoadFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
force_native = true
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.godk")
use_native_dialog = true

[node name="VolumeController" parent="." instance=ExtResource("1_sdyqd")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="."]
layout_mode = 2
text = "Save"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="."]
layout_mode = 2
text = "Load"

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewButton" type="Button" parent="."]
layout_mode = 2
text = "New Project"

[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
[connection signal="volume_changed" from="VolumeController" to="." method="_on_volume_controller_volume_changed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="NewButton" to="." method="_on_new_button_pressed"]
